Initial commit for comprehensiveness metrics

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ authors = [
     {name = "Radu Marinescu",email = "radu.marinescu@ie.ibm.com"},
     {name = "Javier Carnerero Cano",email = "javier.cano@ibm.com"},
     {name = "Massimiliano Pronesti",email = "massimiliano.pronesti@ibm.com"},
-]license = {text = "Apache-2.0"}
+    {name = "Adam Dejl",email = "adam.dejl18@imperial.ac.uk"},
+]
+license = {text = "Apache-2.0"}
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 classifiers=[
     "License :: OSI Approved :: Apache Software License"
 ]
@@ -41,6 +43,7 @@ dependencies = [
     "matplotlib",
     "ipykernel",
     "ipywidgets",
+    "pyomo",
     "rank_bm25",
     "pgmpy",
     "spacy",
@@ -60,11 +63,19 @@ dependencies = [
     "thefuzz",
     "vllm",
     "langchain_huggingface"
+    "gravis",
+    "pint",
 ]
 
 [tool.setuptools.packages.find]
 exclude = ["tests", "tests.*"]
 namespaces = false
+
+[tool.ruff.lint]
+ignore = ["E402"]
+
+[tool.pyright]
+reportUnnecessaryComparison = true
 
 [project.urls]
 Source = "https://github.com/IBM/FactReasoner"
