Correctly link contexts in the end-to-end pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,13 +62,13 @@ dependencies = [
     "pytorch-lightning",
     "thefuzz",
     "vllm",
-    "langchain_huggingface"
+    "langchain_huggingface",
     "gravis",
     "pint",
 ]
 
 [tool.setuptools.packages.find]
-exclude = ["tests", "tests.*"]
+exclude = ["tests", "tests.*", "results", "results.*"]
 namespaces = false
 
 [tool.ruff.lint]
