Update README and dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ dependencies = [
     "langchain_huggingface",
     "gravis",
     "pint",
+    "json-repair",
 ]
 
 [tool.setuptools.packages.find]
