Add watsonx backend and include model in yaml file
Signed-off-by: jbrry <jbarry.dub@gmail.com>

--- a/src/fact_reasoner/configs/models.yaml
+++ b/src/fact_reasoner/configs/models.yaml
@@ -84,8 +84,15 @@ HF_MODELS:
 WX_MODELS:
   mixtral-8x22b-instruct:
     model_id: "watsonx/mistralai/Mixtral-8x22B-Instruct-v0.1"
-    api_base: "https://watsonx.ibm.com/mixtral-8x22b-instruct-v01/v1"
+    api_base: ""
     max_new_tokens: 16384
+    prompt_template: "<|begin_of_text|><|start_header_id|>user<|end_header_id|>\n\n{}<|eot_id|><|start_header_id|>assistant<|end_header_id|>"
+    prompt_begin: "<|begin_of_text|><|start_header_id|>user<|end_header_id|>"
+    prompt_end: "<|eot_id|><|start_header_id|>assistant<|end_header_id|>"
+  llama-3.3-70b-instruct:
+    model_id: "watsonx/meta-llama/llama-3-3-70b-instruct"
+    api_base: ""
+    max_new_tokens: 128000
     prompt_template: "<|begin_of_text|><|start_header_id|>user<|end_header_id|>\n\n{}<|eot_id|><|start_header_id|>assistant<|end_header_id|>"
     prompt_begin: "<|begin_of_text|><|start_header_id|>user<|end_header_id|>"
     prompt_end: "<|eot_id|><|start_header_id|>assistant<|end_header_id|>"
